# ita-c72-quiz

./: .gitignore  CMakeLists.txt
Fragen-Katalog/: C-Fragen.txt  Tue_Mar_30_2021.txt
app/: CMakeLists.txt  PruefungsQuiz.c  main.c
cmake/: Documentation.cmake
docs/: Doxyfile.in
docs/html/: _c-_fragen_8txt.html  _kleines__1x1_8txt.html  _pruefungs_quiz_8h.html  _pruefungs_quiz_8h.js  _pruefungs_quiz_8h_source.html  _tue___mar__30__2021_8txt.html  annotated.html  annotated_dup.js  app_2_c_make_lists_8txt.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b38aed277395877e367831af70feeda2.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  file__index_8c.html  file__index_8c.js  file__index_8h.html  file__index_8h.js  file__index_8h_source.html  files.html  functions.html  functions_vars.html  generator_8c.html  generator_8c.js  generator_8h.html  generator_8h.js  generator_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  load__fragenfeld_8c.html  load__fragenfeld_8c.js  load__fragenfeld_8h.html  load__fragenfeld_8h.js  (+27 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.html  classes_1.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  defines_2.html  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  defines_6.html  defines_6.js  defines_7.html  defines_7.js  defines_8.html  defines_8.js  defines_9.html  (+46 more)
include/: PruefungsQuiz.h  file_index.h  generator.h  load_fragenfeld.h  menue.h  save_fragenfeld.h  start_quiz.h
include/Fragen-Katalog/: Kleines_1x1.txt
src/: CMakeLists.txt  file_index.c  generator.c  load_fragenfeld.c  menue.c  save_fragenfeld.c  start_quiz.c
